--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,6 +84,8 @@ jobs:
 
   testopenjdk16:
     runs-on: ubuntu-latest
+#    TODO remove from standard PR builds
+#    if: github.ref == 'refs/heads/master'
 
     steps:
       - name: Checkout
@@ -99,3 +101,24 @@ jobs:
 
       - name: Run Checks
         run: ./gradlew test -Dtest.java.version=16
+
+  testwindows:
+    runs-on: windows-latest
+#    TODO remove from standard PR builds
+#    if: github.ref == 'refs/heads/master'
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Validate Gradle Wrapper
+        uses: gradle/wrapper-validation-action@v1
+
+      - name: Configure JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+
+      - name: Test
+        run: |
+          ./gradlew test
