--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,8 +88,7 @@ jobs:
 
   testopenjdk8:
     runs-on: ubuntu-latest
-    #    TODO remove from standard PR builds
-    #    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master'
 
     steps:
       - name: Checkout
@@ -109,8 +108,7 @@ jobs:
 
   testopenjdk8alpn:
     runs-on: ubuntu-latest
-    #    TODO remove from standard PR builds
-    #    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master'
 
     steps:
       - name: Checkout
@@ -130,8 +128,7 @@ jobs:
 
   testopenjsse:
     runs-on: ubuntu-latest
-    #    TODO remove from standard PR builds
-    #    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master'
 
     steps:
       - name: Checkout
@@ -151,8 +148,7 @@ jobs:
 
   testconscrypt:
     runs-on: ubuntu-latest
-    #    TODO remove from standard PR builds
-    #    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master'
 
     steps:
       - name: Checkout
@@ -172,8 +168,7 @@ jobs:
 
   testbouncycastle:
     runs-on: ubuntu-latest
-    #    TODO remove from standard PR builds
-    #    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master'
 
     steps:
       - name: Checkout
@@ -193,8 +188,7 @@ jobs:
 
   testcorretto:
     runs-on: ubuntu-latest
-    #    TODO remove from standard PR builds
-    #    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master'
 
     steps:
       - name: Checkout
@@ -214,8 +208,7 @@ jobs:
 
   testopenjdk16:
     runs-on: ubuntu-latest
-    #    TODO remove from standard PR builds
-    #    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master'
 
     steps:
       - name: Checkout
