Build CI for Windows (#6645)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -225,3 +225,24 @@ jobs:
 
       - name: Run Checks
         run: ./gradlew test -Dtest.java.version=16
+
+  testwindows:
+    runs-on: windows-latest
+    if: github.ref == 'refs/heads/master'
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Validate Gradle Wrapper
+        uses: gradle/wrapper-validation-action@v1
+
+      - name: Configure JDK
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: 11
+
+      - name: Test
+        run: |
+          ./gradlew test
