Install JDK 8 also

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -118,11 +118,17 @@ jobs:
       - name: Validate Gradle Wrapper
         uses: gradle/wrapper-validation-action@v1
 
-      - name: Configure JDK
+      - name: Install Old JDK 8
         uses: actions/setup-java@v2
         with:
           distribution: 'adopt'
           java-version: 8.0.242
+
+      - name: Configure JDK
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: 11
 
       - name: Run Checks
         run: ./gradlew test -Dtest.java.version=8 -Dokhttp.platform=jdk8alpn -Dalpn.boot.version=8.1.13.v20181017
