Fix OpenJSSE build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -135,7 +135,8 @@ jobs:
 
   testopenjsse:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
+    # TODO revert
+#    if: github.ref == 'refs/heads/master'
 
     steps:
       - name: Checkout
