Loosen testing of BC ciphers.
Loosen testing of BC ciphers.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -175,7 +175,8 @@ jobs:
 
   testbouncycastle:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
+#    TODO  revert
+#    if: github.ref == 'refs/heads/master'
 
     steps:
       - name: Checkout
