--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -256,7 +256,8 @@ jobs:
 
   testgraal:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
+#    TODO revert
+#    if: github.ref == 'refs/heads/master'
 
     steps:
       - name: Checkout
