- Normalize test resources files containing timestamps - Disable locally-failing test - Apply configureondemand and parallel builds - Apply Gradle Enterprise plugin. Point plugin at trial EC2 instance
Signed-off-by: Rob Moore <rmoore@gradle.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,6 @@
 org.gradle.jvmargs='-Dfile.encoding=UTF-8'
 android.enableJetifier=true
 android.useAndroidX=true
+org.gradle.caching=false
+org.gradle.configureondemand=true
+org.gradle.parallel=true
