- Make explicit the dependency from :okcurl:sourcesJar upon :okcurl:copyResourcesTemplates - Make explicit the dependency from :okhttp:sourcesJar upon :okhttp:copyJavaTemplates - Disable another locally-failing test
Signed-off-by: Rob Moore <rmoore@gradle.com>

--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -38,6 +38,9 @@ compileKotlin {
   dependsOn 'copyJavaTemplates'
 }
 
+sourcesJar {
+    dependsOn 'copyJavaTemplates'
+}
 task copyJavaTemplates(type: Copy) {
   from 'src/main/java-templates'
   into "$buildDir/generated/sources/java-templates/java/main"
