Make all Gradle tasks cacheable by normalization
Ignore the JARs' "Bnd-LastModified" property in the META-INF/MANIFEST
.MF when Gradle determines if determining if task inputs have changed.

Signed-off-by: Rob Moore <rmoore@gradle.com>

--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,14 @@ allprojects {
       configurations.findAll { it.canBeResolved }.files
     }
   }
+
+  normalization {
+    runtimeClasspath {
+      metaInf {
+        ignoreAttribute("Bnd-LastModified")
+      }
+    }
+  }
 }
 
 ext.applyOsgi = { project ->
