--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -33,14 +33,16 @@ normalization {
            - The below two ignored files are generated during test execution
            by the test: okhttp/src/test/java/okhttp3/osgi/OsgiTest.java
 
-           - The compressed index.xml file contains a timestamp property,
-           which effectively means that running the test changes the test
-           classpath itself. This meaning that the test task can't be sure
-           that it is up-to-date. So it has to run again in order to be safe.
+           - The compressed index.xml file contains a timestamp property which
+           changes with every test execution, such that running the test
+           actually changes the test classpath itself. This means that the
+           test task can't be sure that it is up-to-date. So it has to run
+           every time in order to be safe, it can't benefit from
+           incremental build acceleration.
 
            - This is unfortunate, because actually it would be safe to declare
-           the task as up-to-date, because these two files, based on the
-           generated index.xml, are outputs, not inputs. We can be sure of
+           the task as up-to-date, because these two files, which are based on
+           the generated index.xml, are outputs, not inputs. We can be sure of
            this because they are deleted in the @BeforeEach method of the
            OsgiTest test class.
 
