--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,7 +89,8 @@ jobs:
 
   testopenjdk8:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
+    # TODO revert
+#    if: github.ref == 'refs/heads/master'
 
     steps:
       - name: Checkout
