Handle strict module handling on JDK17

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,8 +89,7 @@ jobs:
 
   testopenjdk8:
     runs-on: ubuntu-latest
-    # TODO revert
-#    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master'
 
     steps:
       - name: Checkout
