--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -256,8 +256,7 @@ jobs:
 
   testgraal:
     runs-on: ubuntu-latest
-#    TODO revert
-#    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master'
 
     steps:
       - name: Checkout
