--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -276,6 +276,9 @@ jobs:
           distribution: 'adopt'
           java-version: 11
 
+      - name: Build okcurl
+        run: ./gradlew okcurl:nativeImage
+
       - name: Build ConsoleLauncher
         run: ./gradlew -PgraalBuild native-image-tests:nativeImage
 
