--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -262,6 +262,9 @@ jobs:
           distribution: 'adopt'
           java-version: 11
 
+      - name: Show Toolchains
+        run: ./gradlew javaToolchains
+
       - name: Run Checks
         run: ./gradlew test -Dtest.java.version=17 -Dorg.gradle.java.installations.paths=/opt/hostedtoolcache/Java_Adopt_jdk/17.0.0-ea.29.0.202101130348/x64
 
