--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -265,6 +265,9 @@ jobs:
       - name: Show Toolchains
         run: ./gradlew javaToolchains -Dorg.gradle.java.installations.paths=/opt/hostedtoolcache/Java_Adopt_jdk/17.0.0-ea.20.0.202105070000/x64
 
+      - name: Kapt
+        run: ./gradlew --stacktrace :samples:guide:kaptKotlin -Dtest.java.version=17 -Dorg.gradle.java.installations.paths=/opt/hostedtoolcache/Java_Adopt_jdk/17.0.0-ea.20.0.202105070000/x64
+
       - name: Run Checks
         run: ./gradlew test -Dtest.java.version=17 -Dorg.gradle.java.installations.paths=/opt/hostedtoolcache/Java_Adopt_jdk/17.0.0-ea.20.0.202105070000/x64
 
