--- a/.editorconfig
+++ b/.editorconfig
@@ -1,2 +1,10 @@
-[{*.kt, *.kts}]
+root = true
+
+[*]
 indent_size = 2
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+[*.{kt, kts}]
+kotlin_imports_layout = ascii
