--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -93,14 +93,7 @@ dependencies {
   compileOnly Dependencies.animalSniffer
 
   // graal build support
-  compileOnly("org.graalvm.nativeimage:svm:20.2.0") {
-    // Avoid kapt tripping up on a non jar dependency.
-    // Only annotations are needed here.
-    // https://youtrack.jetbrains.com/issue/KT-29513
-    exclude group: 'org.graalvm.nativeimage'
-    exclude group: 'org.graalvm.truffle'
-    exclude group: 'org.graalvm.compiler'
-  }
+  compileOnly("org.graalvm.nativeimage:svm:21.2.0")
 
   testImplementation project(':okhttp-testing-support')
   testImplementation project(':okhttp-tls')
