Classpath android-junit5 in root buildscript

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
     classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.10.1"
     classpath "com.android.tools.build:gradle:7.0.0"
+    classpath "de.mannodermaus.gradle.plugins:android-junit5:1.7.1.1"
     classpath Dependencies.bnd
   }
 
