--- a/android-test/build.gradle
+++ b/android-test/build.gradle
@@ -4,8 +4,12 @@ apply plugin: "de.mannodermaus.android-junit5"
 
 android {
   compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    targetCompatibility JavaVersion.VERSION_1_8
+    sourceCompatibility JavaVersion.VERSION_11
+    targetCompatibility JavaVersion.VERSION_11
+  }
+
+  kotlinOptions {
+    jvmTarget = JavaVersion.VERSION_11
   }
 
   packagingOptions {
