--- a/regression-test/build.gradle
+++ b/regression-test/build.gradle
@@ -3,8 +3,12 @@ apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
   compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    targetCompatibility JavaVersion.VERSION_1_8
+    sourceCompatibility JavaVersion.VERSION_11
+    targetCompatibility JavaVersion.VERSION_11
+  }
+
+  kotlinOptions {
+    jvmTarget = JavaVersion.VERSION_11
   }
 
   packagingOptions {
