--- a/regression-test/build.gradle
+++ b/regression-test/build.gradle
@@ -29,23 +29,21 @@ android {
   }
 }
 
-def okhttplegacyversion = "3.12.12"
-//def okhttplegacyversion = "4.9.1"
+def okhttpLegacyVersion = "3.12.12"
 
 dependencies {
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${Versions.kotlin}"
-  implementation "org.jetbrains.kotlin:kotlin-reflect:${Versions.kotlin}"
-  implementation 'com.google.android.gms:play-services-safetynet:17.0.1'
-  implementation "com.squareup.okhttp3:okhttp:${okhttplegacyversion}"
-  implementation("com.squareup.okhttp3:okhttp-tls:${okhttplegacyversion}") {
+  implementation Dependencies.kotlinReflect
+  implementation Dependencies.playServicesSafetynet
+  implementation "com.squareup.okhttp3:okhttp:${okhttpLegacyVersion}"
+  implementation("com.squareup.okhttp3:okhttp-tls:${okhttpLegacyVersion}") {
     exclude group: 'org.bouncycastle'
   }
-  androidTestImplementation "com.squareup.okhttp3:mockwebserver:${okhttplegacyversion}"
-  androidTestImplementation "org.bouncycastle:bcprov-jdk15to18:${Versions.bouncycastle}"
-  androidTestImplementation "org.bouncycastle:bctls-jdk15to18:${Versions.bouncycastle}"
-  androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-  androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-  androidTestImplementation 'org.apache.httpcomponents.client5:httpclient5:5.0'
-  androidTestImplementation 'com.squareup.moshi:moshi:1.12.0'
-  androidTestImplementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
+  androidTestImplementation "com.squareup.okhttp3:mockwebserver:${okhttpLegacyVersion}"
+  androidTestImplementation Dependencies.bouncycastle
+  androidTestImplementation Dependencies.bouncycastletls
+  androidTestImplementation Dependencies.androidxExtJunit
+  androidTestImplementation Dependencies.androidxEspressoCore
+  androidTestImplementation Dependencies.httpclient5
+  androidTestImplementation Dependencies.moshi
+  androidTestImplementation Dependencies.moshiCompiler
 }
