--- a/regression-test/build.gradle
+++ b/regression-test/build.gradle
@@ -45,5 +45,5 @@ dependencies {
   androidTestImplementation Dependencies.androidxEspressoCore
   androidTestImplementation Dependencies.httpclient5
   androidTestImplementation Dependencies.moshi
-  androidTestImplementation Dependencies.moshiCompiler
+  androidTestImplementation Dependencies.moshiKotlin
 }
