--- a/okcurl/build.gradle
+++ b/okcurl/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-  id "com.palantir.graal" version "0.9.0"
+  id "com.palantir.graal"
 }
 
 import org.apache.tools.ant.taskdefs.condition.Os
