--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 buildscript {
   dependencies {
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
-    classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.10.1"
-    classpath "com.android.tools.build:gradle:7.0.0"
-    classpath "de.mannodermaus.gradle.plugins:android-junit5:1.7.1.1"
-    classpath "gradle.plugin.com.palantir.graal:gradle-graal:0.9.0"
-    classpath Dependencies.bnd
+    classpath Dependencies.kotlinPlugin
+    classpath Dependencies.dokkaPlugin
+    classpath Dependencies.androidPlugin
+    classpath Dependencies.androidJunit5Plugin
+    classpath Dependencies.graalPlugin
+    classpath Dependencies.bndPlugin
   }
 
   repositories {
