--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     classpath Dependencies.androidJunit5Plugin
     classpath Dependencies.graalPlugin
     classpath Dependencies.bndPlugin
+    classpath Dependencies.shadowPlugin
   }
 
   repositories {
@@ -17,7 +18,6 @@ buildscript {
 
 plugins {
   id "ru.vyarus.animalsniffer" version "1.5.3"
-  id "com.github.johnrengelman.shadow" version "5.2.0"
   id "me.champeau.gradle.japicmp" version "0.2.9"
   id "com.diffplug.spotless" version "5.1.2"
   id "net.ltgt.errorprone" version "1.2.1"
